--- a/config.dist.yml
+++ b/config.dist.yml
@@ -1,13 +1,15 @@
 # Node roles
-roles:
-    - agent
-    - orchestrator
-    - worker
+roles: ${SLOTH_ROLES:-agent,orchestrator,worker}
 
 
-# Common configs
-common:
-    key: value
+# Log configs
+log:
+    # Log level, it can be debug, info, warn, error, panic, fatal
+    level: ${SLOTH_LOG_LEVEL:-warn}
+    # output can be stdout or abs path to log file /var/logs/sloth.log
+    output: ${SLOTH_LOG_OUTPUT:-stdout}
+    # Format can be json
+    format: ${SLOTH_LOG_FORMAT:-json}
 
 
 # only if roles has agent
