--- a/config.dist.yml
+++ b/config.dist.yml
@@ -15,8 +15,7 @@ log:
 # only if roles has agent
 agent:
     hostname: ${SLOTH_AGENT_HOSTNAME:-localhost}
-    validation_key: ${SLOTH_AGENT_VALIDATION_KEY:-/etc/sloth/validation.pem}
-    client_key: ${SLOTH_AGENT_CLIENT_KEY:-/etc/sloth/client.pem}
+    client_key: ${SLOTH_AGENT_CLIENT_KEY:-feF-KciSUzsx3kXipfvrw0qN0ty9fTTS}
     checks:
         -
             type: http
@@ -36,11 +35,6 @@ agent:
                 -
                     name: headers
                     value: x-key=value_here
-
-
-# only if roles has orchestrator
-orchestrator:
-    key: value
 
 
 # only if roles has worker
