--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_install:
   - docker run -d -p 127.0.0.1:2379:2379 -p 127.0.0.1:2380:2380 --volume=${DATA_DIR}:/etcd-data --name etcd ${REGISTRY}:latest /usr/local/bin/etcd --data-dir=/etcd-data --name node --initial-advertise-peer-urls http://${NODE}:2380 --listen-peer-urls http://0.0.0.0:2380 --advertise-client-urls http://${NODE}:2379 --listen-client-urls http://0.0.0.0:2379 --initial-cluster node1=http://${NODE}:2380
   - docker ps
   - sleep 30
+  - netstat -tulpn
   - curl -L http://127.0.0.1:2379/v2/stats/leader -v
 
 # Fix this by renaming the directory before testing.
