--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,12 @@ go:
 
 env:
   - GO111MODULE=on
-  - ED_VERSION=3.3.18
 
 install: true
 
 before_install:
-  - curl -sL https://github.com/etcd-io/etcd/releases/download/v{$ED_VERSION}/etcd-v{$ED_VERSION}-linux-amd64.tar.gz | tar xz
-  - ./etcd-v$ED_VERSION-linux-amd64/etcd &
+  - curl -sL https://github.com/etcd-io/etcd/releases/download/v3.3.18/etcd-v3.3.18-linux-amd64.tar.gz | tar xz
+  - ./etcd-v3.3.18-linux-amd64/etcd &
   - sleep 10
   - curl -L http://127.0.0.1:2379/v2/stats/leader -v
 
